@@ -1206,6 +1206,60 @@ operator|.
 name|CLOSED
 expr_stmt|;
 block|}
+annotation|@
+name|Override
+DECL|method|available ()
+specifier|public
+specifier|synchronized
+name|int
+name|available
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|getInputStream
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|fileLength
+operator|!=
+literal|null
+condition|)
+block|{
+name|long
+name|remaining
+init|=
+name|fileLength
+operator|-
+name|currentPos
+decl_stmt|;
+return|return
+name|remaining
+operator|<=
+name|Integer
+operator|.
+name|MAX_VALUE
+condition|?
+operator|(
+name|int
+operator|)
+name|remaining
+else|:
+name|Integer
+operator|.
+name|MAX_VALUE
+return|;
+block|}
+else|else
+block|{
+return|return
+name|Integer
+operator|.
+name|MAX_VALUE
+return|;
+block|}
+block|}
 block|}
 end_class
 
