@@ -1319,6 +1319,416 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testAvailable ()
+specifier|public
+name|void
+name|testAvailable
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|ByteRangeInputStream
+name|bris
+init|=
+name|mock
+argument_list|(
+name|ByteRangeInputStream
+operator|.
+name|class
+argument_list|,
+name|CALLS_REAL_METHODS
+argument_list|)
+decl_stmt|;
+name|InputStreamAndFileLength
+name|mockStream
+init|=
+operator|new
+name|InputStreamAndFileLength
+argument_list|(
+literal|65535L
+argument_list|,
+name|mock
+argument_list|(
+name|InputStream
+operator|.
+name|class
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|doReturn
+argument_list|(
+name|mockStream
+argument_list|)
+operator|.
+name|when
+argument_list|(
+name|bris
+argument_list|)
+operator|.
+name|openInputStream
+argument_list|(
+name|Mockito
+operator|.
+name|anyLong
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Whitebox
+operator|.
+name|setInternalState
+argument_list|(
+name|bris
+argument_list|,
+literal|"status"
+argument_list|,
+name|ByteRangeInputStream
+operator|.
+name|StreamStatus
+operator|.
+name|SEEK
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Before read or seek, available should be same as filelength"
+argument_list|,
+literal|65535
+argument_list|,
+name|bris
+operator|.
+name|available
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|verify
+argument_list|(
+name|bris
+argument_list|,
+name|times
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|.
+name|openInputStream
+argument_list|(
+name|Mockito
+operator|.
+name|anyLong
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|bris
+operator|.
+name|seek
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Seek 10 bytes, available should return filelength - 10"
+argument_list|,
+literal|65525
+argument_list|,
+name|bris
+operator|.
+name|available
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|//no more bytes available
+name|bris
+operator|.
+name|seek
+argument_list|(
+literal|65535
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Seek till end of file, available should return 0 bytes"
+argument_list|,
+literal|0
+argument_list|,
+name|bris
+operator|.
+name|available
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|//test reads, seek back to 0 and start reading
+name|bris
+operator|.
+name|seek
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|bris
+operator|.
+name|read
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Read 1 byte, available must return  filelength - 1"
+argument_list|,
+literal|65534
+argument_list|,
+name|bris
+operator|.
+name|available
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|bris
+operator|.
+name|read
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Read another 1 byte, available must return  filelength - 2"
+argument_list|,
+literal|65533
+argument_list|,
+name|bris
+operator|.
+name|available
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|//seek and read
+name|bris
+operator|.
+name|seek
+argument_list|(
+literal|100
+argument_list|)
+expr_stmt|;
+name|bris
+operator|.
+name|read
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Seek to offset 100 and read 1 byte, available should return filelength - 101"
+argument_list|,
+literal|65434
+argument_list|,
+name|bris
+operator|.
+name|available
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|bris
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testAvailableLengthNotKnown ()
+specifier|public
+name|void
+name|testAvailableLengthNotKnown
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|ByteRangeInputStream
+name|bris
+init|=
+name|mock
+argument_list|(
+name|ByteRangeInputStream
+operator|.
+name|class
+argument_list|,
+name|CALLS_REAL_METHODS
+argument_list|)
+decl_stmt|;
+comment|//Length is null for chunked transfer-encoding
+name|InputStreamAndFileLength
+name|mockStream
+init|=
+operator|new
+name|InputStreamAndFileLength
+argument_list|(
+literal|null
+argument_list|,
+name|mock
+argument_list|(
+name|InputStream
+operator|.
+name|class
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|doReturn
+argument_list|(
+name|mockStream
+argument_list|)
+operator|.
+name|when
+argument_list|(
+name|bris
+argument_list|)
+operator|.
+name|openInputStream
+argument_list|(
+name|Mockito
+operator|.
+name|anyLong
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Whitebox
+operator|.
+name|setInternalState
+argument_list|(
+name|bris
+argument_list|,
+literal|"status"
+argument_list|,
+name|ByteRangeInputStream
+operator|.
+name|StreamStatus
+operator|.
+name|SEEK
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|,
+name|bris
+operator|.
+name|available
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testAvailableStreamClosed ()
+specifier|public
+name|void
+name|testAvailableStreamClosed
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|ByteRangeInputStream
+name|bris
+init|=
+name|mock
+argument_list|(
+name|ByteRangeInputStream
+operator|.
+name|class
+argument_list|,
+name|CALLS_REAL_METHODS
+argument_list|)
+decl_stmt|;
+name|InputStreamAndFileLength
+name|mockStream
+init|=
+operator|new
+name|InputStreamAndFileLength
+argument_list|(
+literal|null
+argument_list|,
+name|mock
+argument_list|(
+name|InputStream
+operator|.
+name|class
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|doReturn
+argument_list|(
+name|mockStream
+argument_list|)
+operator|.
+name|when
+argument_list|(
+name|bris
+argument_list|)
+operator|.
+name|openInputStream
+argument_list|(
+name|Mockito
+operator|.
+name|anyLong
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Whitebox
+operator|.
+name|setInternalState
+argument_list|(
+name|bris
+argument_list|,
+literal|"status"
+argument_list|,
+name|ByteRangeInputStream
+operator|.
+name|StreamStatus
+operator|.
+name|SEEK
+argument_list|)
+expr_stmt|;
+name|bris
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|bris
+operator|.
+name|available
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Exception should be thrown when stream is closed"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+literal|"Exception when stream is closed"
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|"Stream closed"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
